<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_glance_smart"
            android:icon="@drawable/ic_main_nav_smart"
            android:title="@string/activity_main_nav_smart" />
        <item
            android:id="@+id/nav_glance_calendric"
            android:icon="@drawable/ic_main_nav_calendric"
            android:title="@string/activity_main_nav_calendric" />
    </group>
    <item android:title="功能">
        <menu>
            <item
                android:id="@+id/nav_kind_batch"
                android:icon="@drawable/ic_batch"
                android:title="批量添加"/>
            <item
                android:id="@+id/nav_kind_note"
                android:icon="@drawable/ic_main_nav_note"
                android:title="@string/entry_note"/>
        </menu>
    </item>
    <item android:title="@string/activity_main_nav_history">
        <menu>
            <item
                android:id="@+id/nav_entry_done"
                android:icon="@drawable/ic_main_nav_done"
                android:title="@string/activity_main_nav_done"/>
            <item
                android:id="@+id/nav_entry_recycleBin"
                android:icon="@drawable/ic_main_nav_recycle_bin"
                android:title="@string/activity_main_nav_recycle_bin"/>
        </menu>
    </item>
    <item android:title="@string/activity_main_nav_about">
        <menu>
            <item
                android:id="@+id/nav_about_setting"
                android:icon="@drawable/ic_main_nav_setting"
                android:title="@string/global_setting" />
            <item
                android:id="@+id/nav_about_version"
                android:icon="@drawable/ic_main_nav_version"
                android:title="@string/activity_main_nav_version" />
        </menu>
    </item>
</menu>
