<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="设置">
    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="bit.eagzzycsl.smartable2.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_account" />

    <header
        android:fragment="bit.eagzzycsl.smartable2.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="bit.eagzzycsl.smartable2.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
</preference-headers>