<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/view_calendric_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <view.CalendricSimpleWeekView
            android:id="@+id/view_calendricSimpleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#eee"
        android:elevation="2dp"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textView_month"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            tools:text="六月" />

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"

                android:text="@string/week_mon" />

            <TextView
                android:id="@+id/cal_week_top_day_1"
                style="@style/cal_week_top_label"

                tools:text="1" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_tue" />

            <TextView
                android:id="@+id/cal_week_top_day_2"
                style="@style/cal_week_top_label" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_wed" />

            <TextView
                android:id="@+id/cal_week_top_day_3"
                style="@style/cal_week_top_label" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_thu" />

            <TextView
                android:id="@+id/cal_week_top_day_4"
                style="@style/cal_week_top_label" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_fri" />

            <TextView
                android:id="@+id/cal_week_top_day_5"
                style="@style/cal_week_top_label" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_sat" />

            <TextView
                android:id="@+id/cal_week_top_day_6"
                style="@style/cal_week_top_label" />
        </LinearLayout>

        <LinearLayout style="@style/cal_week_liner_ver">

            <TextView
                style="@style/cal_week_top_label"
                android:text="@string/week_sun" />

            <TextView
                android:id="@+id/cal_week_top_day_7"
                style="@style/cal_week_top_label" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>