<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog_remind">
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorMyYellow"
        android:textSize="22sp"
        android:textColor="@color/colorMyWhite"
        android:drawableLeft="@drawable/ic_notifications_none_white_36dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/title_remind_time"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/btn_remind_time1"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time1"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_30min"/>

            <Button
                android:id="@+id/btn_remind_time2"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time2"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_1h"/>

            <Button
                android:id="@+id/btn_remind_time3"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time3"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_3h"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_remind_time4"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time4"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_5min"/>

            <Button
                android:id="@+id/btn_remind_time5"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time5"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_9am"/>

            <Button
                android:id="@+id/btn_remind_time6"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time6"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_10pm"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_remind_time7"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorMyTransparent"
                android:textColor="@color/colorMyYellow"
                android:drawableTop="@drawable/ic_btn_remind_time7"
                android:layout_margin="@dimen/activity_vertical_padding"
                android:drawablePadding="@dimen/activity_vertical_padding"
                android:text="@string/btn_time_other"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
